<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75sp"
        android:layout_height="75sp"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/photo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:fontFamily="@font/legrand"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/legrand"
            android:gravity="center"
            android:text="@string/number"
            android:textSize="22sp" />
    </LinearLayout>


</LinearLayout>