<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarConfirmAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkToolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/legrand"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/colorFontToolbar"
            android:textSize="25sp" />
    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/legrand"
        android:text="@string/recive_sms"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputCodeHere"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:fontFamily="@font/legrand"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/checkAccepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/legrand"
        android:onClick="checkBoxListener"
        android:text="@string/iAgree"
        android:textSize="11sp" />

    <Button
        android:id="@+id/btnComeIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/legrand"
        android:text="@string/toComeIn"
        app:layout_anchor="@id/checkAccepted"
        app:layout_anchorGravity="bottom|center_horizontal" />


</android.support.design.widget.CoordinatorLayout>